<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mobileproject.fragments.HomeFragment"
        android:label="@string/nav_home" />

    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.mobileproject.fragments.MapFragment"
        android:label="@string/nav_map" >
        <action
            android:id="@+id/action_mapFragment_to_locationDetailFragment"
            app:destination="@id/locationDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_add_spot"
        android:name="com.example.mobileproject.fragments.fragment_add_spot"
        android:label="@string/nav_add_spot" />

    <fragment
        android:id="@+id/nav_rewards"
        android:name="com.example.mobileproject.ui.rewards.RewardsFragment"
        android:label="@string/nav_rewards" >
        <action
            android:id="@+id/action_rewardsFragment_to_rewardsStoreFragment"
            app:destination="@id/nav_rewards_store" />
    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.mobileproject.fragments.ProfileFragment"
        android:label="@string/nav_profile" >
        <action
            android:id="@+id/action_profileFragment_to_friendsFragment"
            app:destination="@id/nav_friends" />
    </fragment>

    <fragment
        android:id="@+id/nav_rewards_store"
        android:name="com.example.mobileproject.ui.rewards.store.RewardsStoreFragment"
        android:label="Rewards Store"
        tools:layout="@layout/fragment_rewards_store" />

    <fragment
        android:id="@+id/locationDetailFragment"
        android:name="com.example.mobileproject.fragments.LocationDetailFragment"
        android:label="Location Details"
        tools:layout="@layout/fragment_location_detail" >
        <argument
            android:name="locationId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_friends"
        android:name="com.example.mobileproject.fragments.FriendsFragment"
        android:label="Friends"
        tools:layout="@layout/fragment_friends" />

</navigation>
